# FaceSwap

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  FaceSwap.sln  FaceSwap.vcxproj  ImageWidget.cpp  ImageWidget.h  LICENSE  MainWindow.cpp  README.md  main.cpp  vcpkg.json
.github/workflows/: CI-Linux.yml  CI-Windows.yml  build_cmake.yml  vcpkg.json
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake  windeployqt.cmake
cmakepresets/: vcpkg.json
src/: AnnotatorWidget.cpp  AnnotatorWidget.h  ImageWidget.cpp  ImageWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Morpher.cpp  Morpher.h  PointHandle.cpp  PointHandle.h  morph.cpp  morph.h
